# Dualocke

./: README.md  settings.gradle.kts  users.json
backend/: build.gradle.kts
backend/src/main/kotlin/org/example/project/: Application.kt  Users.kt
backend/src/test/kotlin/org/example/project/: ApplicationTest.kt
client/: build.gradle.kts
client/src/commonMain/kotlin/org/example/project/: App.kt
client/src/jvmMain/kotlin/org/example/project/: AuthDesktop.kt  HomeScreen.kt  MgbaStart.kt  main.kt  mgba.kt
client/src/webMain/kotlin/org/example/project/: main.kt
client/src/webMain/resources/: index.html
composeApp/: build.gradle.kts
core/: build.gradle.kts
core/src/commonMain/kotlin/: Auth.kt  Models.kt
core/src/commonMain/kotlin/org/example/project/: Greeting.kt  saveToken.kt
core/src/jvmMain/kotlin/: Auth.jvm.kt
emulator/: nuzlocke.lua
gradle/: libs.versions.toml
jni/: CMakeLists.txt  Emulator.kt  EmulatorBridge.c
jni/build-jni/: CMakeCache.txt  Makefile  cmake_install.cmake
mgba/: README_DE.md
mgba/src/platform/windows/setup/: setup.iss.in
server/: build.gradle.kts
